CSS styling, markdown and frontmatter Variables!

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,27 @@
 ---
+const pageTitle = "About Me";
+
+
+const identity = {
+  firstName: "Gabriel",
+  lastName: "Knowles-Szuniewicz",
+  country: "United Kingdom",
+  occupation: "Student",
+  hobbies: ["Programming", "Tea drinking", "Rock climbing"],
+};
+
+import '../styles/global.css';
+
+const skills = ["HTML", "CSS", "JavaScript", "Python", "Astro", "History", "Creative Writing"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "1000"
+
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -7,15 +30,27 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
+        <style define:vars={{skillColor, fontWeight, textCase}}>
+            h1 {
+              color: purple;
+              font-size: 4rem;
+            }
+            .skill {
+                color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
+ }
+          </style>
+
         <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 
 		<h1>Compolotics</h1>
-        <h1>About Me</h1>
+        <h1>{pageTitle}</h1>
         <h2>... and this site!</h2>
       
         <p>Hi! This is Gabriel a student developer in the UK. This is a blog about computers and Polotics - especially Geopolotics. Hence the day Compolotics!
@@ -23,4 +58,25 @@
         </p>
       
         <p>Please take everything I say with many grains of salt and definitly get your news from somewhere else because I am a student with no training in Journalism or Political correspondances!</p>	</body>
-</html>
+
+        <p>Here are a few facts about me:</p>
+        <ul>
+          <li>My name is {identity.firstName}.</li>
+          <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+          {identity.hobbies.length >= 2 && 
+            <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+          } 
+        </ul>
+        <p>My skills are:</p>
+        <ul>
+          {skills.map((skill) => <li class="skill">{skill}</li>)}
+        </ul>
+        astro
+
+{happy && <p>I am happy to be learning Astro!</p>}
+
+{finished && <p>I finished this tutorial!</p>}
+
+{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+
+        </html>
