--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 const pageTitle = "About Me";
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 
 const identity = {
@@ -33,6 +35,7 @@ const textCase = "uppercase"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
+        
         <style define:vars={{skillColor, fontWeight, textCase}}>
             h1 {
               color: purple;
@@ -44,10 +47,10 @@ const textCase = "uppercase"
     text-transform: var(--textCase);
  }
           </style>
-
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+          		<script>
+                    import "../scripts/menu.js";
+            </script>
+          <Header/>
 
 		<h1>Compolotics</h1>
         <h1>{pageTitle}</h1>
@@ -78,5 +81,7 @@ const textCase = "uppercase"
 {finished && <p>I finished this tutorial!</p>}
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+<Footer />
+<body/>
 
         </html>
