--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,8 @@
 ---
 const pageTitle="Blog"
 import '../styles/global.css';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -12,9 +14,10 @@ import '../styles/global.css';
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <script>
+            import "../scripts/menu.js";
+    </script>
+        <Header/>
 
         <h1>Compolotics</h1>
         <h1>{pageTitle}</h1>
@@ -22,5 +25,6 @@ import '../styles/global.css';
         <li><a href="/posts/post-1/">Post 1</a></li>
         <li><a href="/posts/post-2/">Post 2</a></li>
         <li><a href="/posts/post-3/">Post 3</a></li>
+        <Footer />
 	</body>
 </html>
