--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
 const pageTitle="Homepage"
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+
 ---
 
 <html lang="en">
@@ -12,11 +15,13 @@ import '../styles/global.css';
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
+		<script>
+			    import "../scripts/menu.js";
+		</script>
+		<Header />
 
 		<h1>{pageTitle}</h1>
 		<h1>My Compolotics blog</h1>
+		<Footer />
 	</body>
 </html>
